docs: fix links

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -55,11 +55,46 @@ export const collections = {
 This configuration creates a default `content` collection that processes all Markdown files in your project. You can customize the collection settings based on your needs.
 
 ::tip
-The `type: page` setting specifies that each file in the collection represents a [Markdown page](/usage/markdown).
+The `type: page` setting specifies that each file in the collection represents a [Markdown page](/docs/usage/markdown).
 ::
 
 ::note{to="/getting-started/collections"}
 Learn more in our **Collections guide**.
 ::
 
+### Create your First Markdown Page
+
+Create a `content/index.md` file in your project root directory:
+
+```md [content/index.md]
+# My First Page
+
+Here is some content.
+```
+
+Read more about writing [Markdown pages](/docs/usage/markdown).
+
+### Display your Page
+
+Create a `pages/index.vue` file and display the page content:
+
+```vue [pages/index.vue]
+<script setup lang="ts">
+const { data: home } = await useAsyncData(() => queryCollection('content').path('/').first())
+
+useSeoMeta({
+  title: home.value?.title,
+  description: home.value?.description
+})
+</script>
+
+<template>
+  <ContentRenderer v-if="home" :value="home" />
+  <div v-else>Home not found</div>
+</template>
+```
+
+::tip{icon="i-lucide-rocket"}
+That's it! You've now created your first Nuxt Content page.
+::
 
