--- a/docs/content/docs/1.getting-started/3.collections.md
+++ b/docs/content/docs/1.getting-started/3.collections.md
@@ -84,7 +84,7 @@ export const collections = {
 
 ## Querying Collections
 
-Use the [`queryCollection`](/api/query-collection) util to fetch one or all items from a collection:
+Use the [`queryCollection`](/docs/composables/query-collection) util to fetch one or all items from a collection:
 
 ```vue [pages/blog.vue]
 <script setup lang="ts">
