--- a/docs/content/docs/1.getting-started/5.configuration.md
+++ b/docs/content/docs/1.getting-started/5.configuration.md
@@ -216,7 +216,7 @@ type Highlight = false | object
 ```
 ::
 
-Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/components/prose#prosepre) and [`ProseCode`](/components/prose#prosecode).
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki) to provide syntax highlighting for [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecode).
 
 | Option    |                     Type                     | Description                                                                                                         |
 | --------- | :------------------------------------------: | :------------------------------------------------------------------------------------------------------------------ |
