--- a/docs/content/docs/2.usage/2.markdown.md
+++ b/docs/content/docs/2.usage/2.markdown.md
@@ -91,7 +91,7 @@ description: 'meta description of the page'
 | ------------------------------------------- | :-------: | ------------------------------------- | -------------------------------------------------------------------------------------------------------- |
 | `title`                                     | `string`  | First `<h1>`{lang="html"} of the page | Title of the page, will also be injected in metas                                                        |
 | `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
-| `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/usage/navigation) return value. |
+| `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/usage/navigation) return value. |
 
 
 ### Excerpt
@@ -126,7 +126,7 @@ Example variables will be injected into the document:
 
 Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
 
-Code highlighting works both on [`ProsePre`](/components/prose#prosepre) and [`ProseCode`](/components/prose#prosecodeinline).
+Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
 
 Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
 
@@ -170,7 +170,7 @@ Block components are components that accept Markdown content or another componen
 The component must contain either:
 
 - A `<slot />` to accept raw text or another component.
-- The [`<MDCSlot />`](/components/mdc-slot) component to accept formatted text.
+- The [`<MDCSlot />`](/docs/components/mdc-slot) component to accept formatted text.
 
 In a markdown file, use the component with the **`::`** identifier.
 
@@ -561,5 +561,5 @@ If you want to customize a Prose component, here are the recommended steps:
 - Make it yours 🚀.
 
 ::callout
-Read the complete Prose reference in the [Prose Components section](/components/prose).
+Read the complete Prose reference in the [Prose Components section](/docs/components/prose).
 ::
