--- a/docs/content/docs/4.components/2.prose.md
+++ b/docs/content/docs/4.components/2.prose.md
@@ -18,11 +18,11 @@ Prose component are origianlly part of [`@nuxtjs/mdc`](https://github.com/nuxt-m
 
 ::code-group
   ```md [Code]
-  [Link](/components/prose)
+  [Link](/docs/components/prose)
   ```
 
   ::preview-card{label="Preview"}
-  [Link](/components/prose)
+  [Link](/docs/components/prose)
   ::
 ::
 
