--- a/docs/content/docs/5.deploy/1.cloudflare.md
+++ b/docs/content/docs/5.deploy/1.cloudflare.md
@@ -1,34 +1,24 @@
 ---
 title: Cloudflare
-description: How to deploy Nuxt Content to Cloudflare Pages.
+description: How to deploy Nuxt Content to Cloudflare Pages with D1 database.
 navigation:
   icon: i-simple-icons-cloudflare
 ---
 
-Nuxt Content uses Nuxt deployment presets to adjust the build process for different hosting platforms. To deploy your Nuxt Content to Cloudflare, you can use the `cloudflare-pages`{lang="ts-type"} preset.
+Nuxt Content uses Nuxt deployment presets to adjust the build process for different hosting platforms.
 
-You can do that in two ways:
+If you use the [Cloudflare Pages GitHub/GitLab integration][1]{target="_blank"} Nuxt will detect it and use the `cloudflare-pages`{lang="ts-type"} preset automatically.
 
-- By defining the `NITRO_PRESET`{lang="ts-type"} to `cloudflare_pages`{lang="ts-type"} when running the build process, like so:
+In order to publish your project, you need to create a Cloudflare D1 database and connect it to your project.
 
-```bash
-NITRO_PRESET=cloudflare_pages npm run build
-```
-
-Or by updating your Nuxt configuration:
-
-```bash
-"preset": "cloudflare_pages",
-```
-
-If you use the [Cloudflare Pages GitHub/GitLab integration][1]{target="_blank"} Nuxt does not require configuration for presets.
+[Learn how to create a D1 database](https://developers.cloudflare.com/d1/get-started/#2-create-a-database)
 
 ## Database
 
 Unfortunately SQLite database is not supported in cloudflare environment and you should use another database.
 You can simply create a D1 database in cloudflare and use Content Module's D1 adapter.
 
-- Use [Nuxt Hub](/deploy/nuxthub) to create, connect and manage D1 database for you.
+- Use [Nuxt Hub](/docs/deploy/nuxthub) to create, connect and manage D1 database for you.
 - Or create a D1 database from Cloudflare dashboard and connect it to you project by creating a `wrangler.toml` file in project root. [Get started with Cloudflare D1][d1]
 
 
