--- a/docs/content/docs/1.getting-started/1.index.md
+++ b/docs/content/docs/1.getting-started/1.index.md
@@ -12,13 +12,13 @@ Welcome to Nuxt Content v3, a major upgrade that brings enhanced performance and
 
 Collections organize related items within your project, helping you manage large datasets more efficiently. Key benefits include:
 
-- **Structured Data**: Configure database architecture and define collections in [`content.config.ts`](/getting-started/collections#defining-collections)
+- **Structured Data**: Configure database architecture and define collections in [`content.config.ts`](/docs/getting-started/collections#defining-collections)
 - **Type-safe Queries**: Direct TypeScript integration across all utilities
 - **Automatic Validation**: Ensure data consistency across frontmatter fields and data files (json, yml...)
 - **Advanced Query Builder**: Filter, sort, and paginate your collections with ease
 - **Studio Integration**: Enhanced form generation and optimal editing experience through [Studio](https://nuxt.studio)
 
-Learn more about [Content Collections](/getting-started/collections).
+Learn more about [Content Collections](/docs/getting-started/collections).
 
 ### Improved Performance
 
@@ -29,7 +29,7 @@ V3 addresses this by transitioning to SQL-based storage in production. This swit
 Benefits include:
 
 - **Optimized Queries**: SQL storage enables ultra-fast data retrieval
-- **Universal Compatibility**: Our adapter-based system integrates SQL databases across all deployment modes (static, server-side, SPA, edge) and platforms. See our [platform deployment options](/deploy/node) for details. We welcome community contributions for additional adapters.
+- **Universal Compatibility**: Our adapter-based system integrates SQL databases across all deployment modes (static, server-side, SPA, edge) and platforms. See our [platform deployment options](/docs/deploy/node) for details. We welcome community contributions for additional adapters.
 
 ### TypeScript Integration
 
