--- a/docs/content/docs/1.getting-started/3.collections.md
+++ b/docs/content/docs/1.getting-started/3.collections.md
@@ -34,11 +34,15 @@ export const collections = {
 }
 ```
 
+::note{to="#collection-types"}
+Learn more about the different types of collections.
+::
+
 ### Collection Schema
 
 Schemas enforce data consistency within a collection and serve as the source of truth for TypeScript types.
 
-Define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
+On top of the [built-in fields](#built-in-fields), you can define a schema by adding the `schema` property to your collection by using a [`zod`](https://zod.dev) schema:
 
 ```ts [content.config.ts]
 import { defineCollection, z } from '@nuxt/content'
@@ -48,7 +52,7 @@ export const collections = {
     source: '**.md',
     type: 'page',
     // Define custom schema for docs collection
-    schema: z.object({  // Schema must be an object
+    schema: z.object({
       tags: z.array(z.string()),
       image: z.string(),
       date: z.Date()
@@ -84,7 +88,7 @@ export const collections = {
 
 ## Querying Collections
 
-Use the [`queryCollection`](/docs/composables/query-collection) util to fetch one or all items from a collection:
+Use the [`queryCollection`](/docs/utils/query-collection) util to fetch one or all items from a collection:
 
 ```vue [pages/blog.vue]
 <script setup lang="ts">
@@ -106,3 +110,61 @@ const { data: posts } = await useAsyncData('blog', () => queryCollection('blog')
 ::note{to="/api/query-collection"}
 Learn more about the available query options in our `queryCollections` API documentation.
 ::
+
+## defineCollection()
+
+The `defineCollection` function defines a collection in your content configuration. Here's its TypeScript signature:
+
+```ts
+function defineCollection(collection: Collection): DefinedCollection
+
+type Collection = {
+  // Determines how content is processed
+  type: 'page' | 'data'
+  // Specifies content location
+  source?: string | CollectionSource
+  // Zod schema for content validation and typing
+  schema?: ZodObject<T>
+}
+
+type CollectionSource = {
+  // Glob pattern for content matching
+  include: string
+  // .path prefix (only applies to 'page' type)
+  prefix?: string
+  // Glob patterns to exclude content
+  exclude?: string[]
+  // Root directory for content matching
+  cwd?: string
+  // Remote git repository URL (e.g., https://github.com/nuxt/content)
+  repository?: string
+}
+```
+
+### Collection Types
+
+The `type` parameter determines content processing:
+- `data`: For structured data files (JSON, YAML) that don't require rendering
+- `page`: For full pages with layouts and components that need rendering
+
+### Built-in Fields
+
+Every collection includes these default fields:
+
+- `_id`: Unique content identifier
+- `stem`: File path without extension (used for sorting and location)
+- `extension`: File extension
+- `meta`: Custom fields not defined in the collection schema
+
+Additional fields for `page` type collections:
+
+- `path`: Generated route path
+- `title`: Page title
+- `description`: Page description
+- `seo`: SEO metadata (to be used with Nuxt's `useSeoMeta` composable)
+- `body`: Page content parsed as AST
+- `navigation`: Page navigation configuration (for [`queryCollectionNavigation](/docs/composables/query-collection-navigation))
+
+### Returns
+
+The function returns the defined collection object.
