--- a/docs/content/docs/5.deploy/1.cloudflare.md
+++ b/docs/content/docs/5.deploy/1.cloudflare.md
@@ -11,16 +11,14 @@ If you use the [Cloudflare Pages GitHub/GitLab integration][1]{target="_blank"} 
 
 In order to publish your project, you need to create a Cloudflare D1 database and connect it to your project.
 
-[Learn how to create a D1 database](https://developers.cloudflare.com/d1/get-started/#2-create-a-database)
+- [Create a D1 database][d1]
+- Link it to your Cloudflare Pages project using the `DB` binding name
 
-## Database
+Redeploy your project.
 
-Unfortunately SQLite database is not supported in cloudflare environment and you should use another database.
-You can simply create a D1 database in cloudflare and use Content Module's D1 adapter.
-
-- Use [Nuxt Hub](/docs/deploy/nuxthub) to create, connect and manage D1 database for you.
-- Or create a D1 database from Cloudflare dashboard and connect it to you project by creating a `wrangler.toml` file in project root. [Get started with Cloudflare D1][d1]
-
+::tip
+Checkout the [**NuxtHub Integration**](/docs/deploy/nuxthub) to deploy your Nuxt Content project on your Cloudflare account with zero configuration and maximum performance.
+::
 
 [1]: https://developers.cloudflare.com/pages/get-started/#connect-your-git-provider-to-pages
 [d1]: https://developers.cloudflare.com/d1/get-started/
