--- a/docs/content/docs/5.deploy/2.vercel.md
+++ b/docs/content/docs/5.deploy/2.vercel.md
@@ -18,6 +18,17 @@ You can simply create a [Vercel Postgres][3] database and use Content Module's P
 
 Checkout [official documentation][4] to create a Vercel Postgress database and connect it to your Vercel project. Nuxt Content will automatically detect connection url from environment variables in production.
 
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    database: {
+      type: 'postgres',
+      url: process.env.POSTGRES_URL,
+      /* Other options for `pg` */
+    }
+  }
+})
+```
 
 [1]: https://vercel.com/docs/deployments/git
 [2]: https://vercel.com/docs/cli
