docs: update structure

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -52,7 +52,7 @@ export const collections = {
 }
 ```
 
-This configuration creates a default `content` collection that processes all Markdown files in your project. You can customize the collection settings based on your needs.
+This configuration creates a default `content` collection that processes all Markdown files located in the `content` folder of your project. You can customize the collection settings based on your needs.
 
 ::tip
 The `type: page` setting specifies that each file in the collection represents a [Markdown page](/docs/usage/markdown).
