--- a/docs/content/docs/2.usage/1.collections.md
+++ b/docs/content/docs/2.usage/1.collections.md
@@ -1,7 +1,14 @@
 ---
-title: 'Content Collections'
+title: Define Collections
 description: 'Learn how to define and configure content collections in your Nuxt application.'
 ---
+
+The Nuxt Content module automatically parses any content files within the `content` directory located at the root of your Nuxt application. This setup allows you to freely structure the folder to suit your project's needs. For a better organization, consider using Content Collections, which let you categorize and manage content more effectively. These collections are defined in a `content.config.ts` file.
+
+::warning
+If no `content.config.ts` file is present, all files within the content folder are parsed and imported by default. However, once a config file is added, only files matching the specified path patterns defined in collections will be imported.
+::
+
 
 ## What are Content Collections?
 
@@ -34,8 +41,9 @@ export const collections = {
 }
 ```
 
-::note{to="#collection-types"}
-Learn more about the different types of collections.
+
+::note{to="/usage/types"}
+Learn more about collection types.
 ::
 
 ### Collection Schema
@@ -61,30 +69,13 @@ export const collections = {
 }
 ```
 
-::tip
-`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types.
+::note
+`@nuxt/content` exposes a `z` object that contains a set of Zod schemas for common data types. Check the [Zod’s README](https://github.com/colinhacks/zod) for complete documentation on how Zod works and what features are available.
 ::
 
-### Multiple Collections
-
-You can define multiple collections to organize different types of content:
-
-```ts [content.config.ts]
-import { defineCollection, z } from '@nuxt/content'
-
-export const collections = {
-  blog: defineCollection({
-    // Load top-level Markdown files from content/blog
-    source: 'blog/*.md',
-    type: 'page'
-  }),
-  docs: defineCollection({
-    // Load all Markdown files from content/docs
-    source: 'docs/**.md',
-    type: 'page'
-  })
-}
-```
+::tip
+You can define as many collections as you want to organize different types of content.
+::
 
 ## Querying Collections
 
@@ -140,12 +131,6 @@ type CollectionSource = {
   repository?: string
 }
 ```
-
-### Collection Types
-
-The `type` parameter determines content processing:
-- `data`: For structured data files (JSON, YAML) that don't require rendering
-- `page`: For full pages with layouts and components that need rendering
 
 ### Built-in Fields
 
