--- a/docs/content/docs/2.usage/3.markdown.md
+++ b/docs/content/docs/2.usage/3.markdown.md
@@ -3,7 +3,6 @@ title: Markdown Pages
 description: "Nuxt Content uses the Markdown syntax and conventions to provide a rich-text editing experience."
 ---
 
-
 ## Define Collection
 
 ```ts [content.config.ts]
@@ -16,12 +15,11 @@ export const collections = {
     })
   })
 }
-
 ```
 
 ## Create `.md` files
 
-Create authors files in `content/blog/` directory.
+Create blog posts in `content/blog/` directory.
 
 ::code-group
 ```md [foo.md]
@@ -48,19 +46,19 @@ Now we can query blog posts:
 
 ```ts
 // Find a foo post
-const theAuthor = await queryCollection('blog')
+const fooPost = await queryCollection('blog')
   .path('/foo')
   .first()
 
 // Get all posts
-const post = await queryCollection('blog')
+const allPosts = await queryCollection('blog')
   .order('date', 'DESC')
   .all()
 ```
 
 ## MDC Syntax
 
-We created the MDC syntax to supercharge Markdown and give you the ability to leverage the power of Vue components with slots and props.
+We created the MDC syntax to supercharge Markdown and give you the ability to integrate Vue components with slots and props inside your Markdown.
 
 ::callout
 Install the [MDC VS Code extension](https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc) to get proper syntax highlighting for your MDC components.
@@ -70,7 +68,7 @@ Install the [MDC VS Code extension](https://marketplace.visualstudio.com/items?i
 
 Front-matter is a convention of Markdown-based CMS to provide meta-data to pages, like description or title. In Nuxt Content, the front-matter uses the YAML syntax with `key: value` pairs.
 
-These data are available when rendering the content and can hold any information that you would need.
+These data are available when rendering the content and can store any information that you would need.
 
 #### Syntax
 
@@ -159,7 +157,7 @@ And then use them in your markdown files in the `content` directory as such:
 
 Every Vue component created inside the `components/content/` directory will be available in Markdown files.
 
-::callout{ type="info"}
+::warning
 Components that are used in Markdown has to be marked as `global` in your Nuxt app if you don't use the `components/content/` directory, visit [Nuxt 3 docs](https://nuxt.com/docs/guide/directory-structure/components) to learn more about it.
 ::
 
@@ -195,10 +193,9 @@ In a markdown file, use the component with the **`::`** identifier.
     The content of the card
     ::
   ::
-
 ::
 
-##### Slots
+#### Slots
 
 A component's slots can accept content or another components.
 
@@ -234,7 +231,7 @@ A component's slots can accept content or another components.
   ::
 ::
 
-##### Nesting
+#### Nesting
 
 MDC supports nested components inside slots by indenting them.
 
@@ -243,9 +240,9 @@ MDC supports nested components inside slots by indenting them.
   ::hero
     :::card
       A nested card
-      ::card
+      ::::card
         A super nested card
-      ::
+      ::::
     :::
   ::
   ```
@@ -260,11 +257,11 @@ MDC supports nested components inside slots by indenting them.
   ::
 ::
 
-::callout{type="info"}
+::note
 You can add more `::::` when nesting components as a visual reminder.
 ::
 
-##### Markdown rendering
+#### Markdown rendering
 
 The `<MDCSlot />`{lang="html"} component is auto-imported by Nuxt Content. It acts as a special slot that accepts rich text rendered by Markdown.
 
@@ -334,7 +331,7 @@ In this example, `:hello{}` will search for the `<Hello />` component, and `-wor
 
 There are two ways to pass props to components using MDC.
 
-##### Inline method
+#### Inline method
 
 The `{}` identifier passes props to components in a terse way by using a `key=value` syntax.
 
@@ -404,7 +401,7 @@ Note that in this case you should use single quotes for the value string so you 
 ```
 ::
 
-##### YAML method
+#### YAML method
 
 The YAML method uses the `---` identifier to declare one prop per line, that can be useful for readability.
 
