--- a/docs/content/docs/6.advanced/4.database.md
+++ b/docs/content/docs/6.advanced/4.database.md
@@ -2,7 +2,7 @@
 title: 'Database' 
 description: 'How Nuxt Content stores and retrieves content' 
 navigation: 
-  title: Content Database 
+  title: SQL Storage 
 --- 
 
 In Content v3, we have introduced a robust storage layer based on SQLite, which offers a powerful and efficient method for managing content. This marks a significant enhancement over the previous file-based storage system, which was constrained by performance and scalability limitations.
