--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -55,10 +55,10 @@ export const collections = {
 This configuration creates a default `content` collection that processes all Markdown files located in the `content` folder of your project. You can customize the collection settings based on your needs.
 
 ::tip
-The `type: page` setting specifies that each file in the collection represents a [Markdown page](/docs/usage/markdown).
+The `type: page` means there is a 1-to-1 relationship between content files and pages on your site.
 ::
 
-::note{to="/getting-started/collections"}
+::note{to="/docs/usage/collections"}
 Learn more in our **Collections guide**.
 ::
 
