--- a/docs/content/docs/2.usage/2.types.md
+++ b/docs/content/docs/2.usage/2.types.md
@@ -108,5 +108,5 @@ The data type is useful for content that doesn’t directly correspond to a webp
 With data collections, you have complete control over the schema, allowing you to define custom structures.
 
 ::note
-There’s no strict relationship between collection type and file extension. For instance, a **page** collection can use [Markdown](/usage/markdown) or [YAML](/usage/yaml) or JS[Markdown](/usage/json) files, and **data** collections can use any of these formats as well. 
+There’s no strict relationship between collection type and file extension. For instance, a **page** collection can use [Markdown](/docs/usage/markdown) or [YAML](/docs/usage/yaml) or JS[Markdown](/docs/usage/json) files, and **data** collections can use any of these formats as well. 
 ::
