--- a/docs/content/docs/2.usage/6.json.md
+++ b/docs/content/docs/2.usage/6.json.md
@@ -43,8 +43,8 @@ Create authors files in `content/authors/` directory.
 ```
 ::
 
-::callout
-Note that each file in `data` collection should contain only one object, therefore having top level array in a JSON file will cause invalid result in query time.
+::warning
+Each file in `data` collection should contain only one object, therefore having top level array in a JSON file will cause invalid result in query time.
 ::
 
 ## Query Data
