!refactor: update tables name and schema and better checksum check

--- a/docs/content/docs/2.usage/1.collections.md
+++ b/docs/content/docs/2.usage/1.collections.md
@@ -92,7 +92,7 @@ const { data: posts } = await useAsyncData('blog', () => queryCollection('blog')
   <div>
     <h1>Blog</h1>
     <ul>
-      <li v-for="post in posts" :key="post._id">
+      <li v-for="post in posts" :key="post.id">
         <NuxtLink :to="post.path">{{ post.title }}</NuxtLink>
       </li>
     </ul>
@@ -138,7 +138,7 @@ type CollectionSource = {
 
 Every collection includes these default fields:
 
-- `_id`: Unique content identifier
+- `id`: Unique content identifier
 - `stem`: File path without extension (used for sorting and location)
 - `extension`: File extension
 - `meta`: Custom fields not defined in the collection schema
