feat: add support for LibSQL

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -49,18 +49,49 @@ export default defineNuxtConfig({
 })
 ```
 
-
 ### `Postgres`
 
-If you plan to deploy your application using PostgreSql database you need to use `postgres` database adapter. 
+If you plan to deploy your application using PostgreSql database you need to use `postgres` database adapter.
+
+First, make sure to install the `pg` package:
+
+```bash [Terminal]
+npx nypm i pg
+```
+
+Then, configure the `postgres` adapter in your `nuxt.config.ts`:
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
   content: {
     database: {
       type: 'postgres',
-      url: 'POSTGRES_URL',
+      url: process.env.POSTGRES_URL,
       /* Other options for `pg` */
+    }
+  }
+})
+```
+
+### `LibSQL` / `Turso`
+
+If you plan to deploy your application using LibSQL/Turso database you need to use `libsql` database adapter. 
+
+First, make sure to install the `@libsql/client` package:
+
+```bash [Terminal]
+npx nypm i @libsql/client
+```
+
+Then, configure the `libsql` adapter in your `nuxt.config.ts`:
+
+```ts [nuxt.config.ts]
+export default defineNuxtConfig({
+  content: {
+    database: {
+      type: 'libsql',
+      url: process.env.TURSO_DATABASE_URL,
+      authToken: process.env.TURSO_AUTH_TOKEN,
     }
   }
 })
