docs: improve database page

--- a/docs/content/docs/6.advanced/4.database.md
+++ b/docs/content/docs/6.advanced/4.database.md
@@ -16,11 +16,11 @@ Content management in Content v3 involves three key steps, which are designed to
 
 ## Generating Database Dump
 
-For each collection in your project, the module reads the content from the defined source and parses it into an Abstract Syntax Tree (AST). It also creates a specific table for each collection based on its schema. The parsed content is then inserted into the corresponding table, ensuring that the data structure aligns with the defined schema for optimal querying.
+For each collection in your project, the module reads the content from the defined source and parses it into an Abstract Syntax Tree (AST). It creates a specific table for each collection based on its schema. The parsed content is then inserted into the corresponding table, ensuring that the data structure aligns with the defined schema for optimal querying. Everything is then saved in a dump file. 
 
 ## Restoring Dump on Cold Start
 
-During runtime, when the application executes the first query to retrieve content, the module reads the generated dump from the previous step and restores it into the target database. This process is efficient and minimizes the time taken to access content.
+During runtime, when the application executes the first query to retrieve content, the module reads the generated dump from the previous step and restores it into the target database. This process is fast and optimized for each deployment mode and platform.
 
 The module employs a special integrity check mechanism to ensure that the database is updated with the latest content. This same integrity check also prevents duplicate imports, maintaining the integrity and accuracy of the data stored.
 
