--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -1,5 +1,5 @@
 ---
-title: Define Collections
+title: Define
 description: 'Learn how to define and configure content collections in your Nuxt application.'
 ---
 
@@ -42,11 +42,6 @@ export const collections = {
   })
 }
 ```
-
-
-::note{to="/docs/usage/types"}
-Learn more about collection types.
-::
 
 ### Collection Schema
 
@@ -119,7 +114,13 @@ type Collection = {
   // Zod schema for content validation and typing
   schema?: ZodObject<T>
 }
+```
 
+::note{to="/docs/usage/types"}
+Learn more about collection types.
+::
+
+```ts
 type CollectionSource = {
   // Glob pattern for content matching
   include: string
@@ -134,24 +135,8 @@ type CollectionSource = {
 }
 ```
 
-### Built-in Fields
-
-Every collection includes these default fields:
-
-- `id`: Unique content identifier
-- `stem`: File path without extension (used for sorting and location)
-- `extension`: File extension
-- `meta`: Custom fields not defined in the collection schema
-
-Additional fields for `page` type collections:
-
-- `path`: Generated route path
-- `title`: Page title
-- `description`: Page description
-- `seo`: SEO metadata (to be used with Nuxt's `useSeoMeta` composable)
-- `body`: Page content parsed as AST
-- `navigation`: Page navigation configuration (for [`queryCollectionNavigation](/docs/composables/query-collection-navigation))
-
-### Returns
+::note{to="/docs/usage/sources"}
+Learn more about collection sources.
+::
 
 The function returns the defined collection object.
