--- a/docs/content/docs/2.collections/2.types.md
+++ b/docs/content/docs/2.collections/2.types.md
@@ -1,9 +1,16 @@
 ---
-title: Collection types
+title: Types
 description: Learn about the two types of collections you can define in Nuxt Content.
 ---
 
 In Nuxt Content, you can specify a type for each collection, depending on the intended purpose of the collection files. Collections can be defined as either **page** or **data** types.
+
+For both types, built-in fields are generated. Every collection includes these default fields:
+
+- `id`: Unique content identifier
+- `stem`: File path without extension (used for sorting and location)
+- `extension`: File extension
+- `meta`: Custom fields not defined in the collection schema
 
 ## Page type
 
@@ -14,7 +21,9 @@ defineCollection({
 })
 ```
 
+::tip
 Use the **page** type if there is a 1-to-1 relationship between content files and pages on your site. 
+::
 
 ### Path generation
 
@@ -30,20 +39,26 @@ Here are examples of generated paths based on file structure:
 | `content/blog/hello.md`          | `/blog/hello`         |
 | `content/1.guide/2.installation` | `/guide/installation` |
 
-
+::note
 You can use the helper [`queryCollection('COLLECTION').path('PATH')`{lang=ts}](/composables/query-collection) to retrieve content by a specific path.
+::
 
 ### Schema Overrides
 
 When you use the **page** type, Nuxt Content generates several standard fields that are commonly used for web pages. These fields provide structure and are **automatically** applied to the collection’s schema:
+
+- `path`: Generated route path
+- `title`: Page title
+- `description`: Page description
+- `seo`: SEO metadata (to be used with Nuxt's `useSeoMeta` composable)
+- `body`: Page content parsed as AST
+- `navigation`: Page navigation configuration (for [queryCollectionNavigation](/docs/composables/query-collection-navigation))
+
+Here is the corresponding schema applied:
 ```ts
-  // Generated path of your file
   path: z.string(),
-  // Title of your page
   title: z.string(),
-  // Description of your page
   description: z.string(),
-  // Seo information
   seo: z.intersection(
     z.object({
       title: z.string().optional(),
@@ -53,13 +68,11 @@ When you use the **page** type, Nuxt Content generates several standard fields t
     }),
     z.record(z.string(), z.any()),
   ).optional().default({}),
-  // AST of your markdown parsed (only useful for Markdown files)
   body: z.object({
     type: z.string(),
     children: z.any(),
     toc: z.any(),
   }),
-  // Navigation information
   navigation: z.union([
     z.boolean(),
     z.object({
@@ -72,26 +85,6 @@ When you use the **page** type, Nuxt Content generates several standard fields t
 
 ::note
 You can override any of these fields by defining them in the collection’s schema.
-::
-
-### Ordering Files
-
-Since each file corresponds to a page, you may want to control the display order in lists. Use numeric prefixes in file and directory names to specify an order. Nuxt Content will use these numbers when ordering content lists.
-
-``` [Directory structure]
-content/
-  1.frameworks/
-    1.vue.md
-    2.nuxt.md
-  2.examples/
-    1.vercel.md
-    2.netlify.md
-    3.heroku.md
-    index.md
-```
-
-::warning
-Separate number from file name using `.` character. Using any other separator will not work.
 ::
 
 ## Data type
@@ -110,3 +103,24 @@ With data collections, you have complete control over the schema, allowing you t
 ::note
 There’s no strict relationship between collection type and file extension. For instance, a **page** collection can use [Markdown](/docs/usage/markdown) or [YAML](/docs/usage/yaml) or JS[Markdown](/docs/usage/json) files, and **data** collections can use any of these formats as well. 
 ::
+
+## Ordering Files
+
+For both types, you may want to control the display order in lists. Use numeric prefixes in file and directory names to specify an order. Nuxt Content will use these numbers when ordering content lists.
+
+``` [Directory structure]
+content/
+  1.frameworks/
+    1.vue.md
+    2.nuxt.md
+  2.examples/
+    1.vercel.md
+    2.netlify.md
+    3.heroku.md
+    index.md
+```
+
+::warning
+Separate number from file name using `.` character. Using any other separator will not work.
+::
+
