--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -1,5 +1,5 @@
 ---
-title: Markdown Pages
+title: Markdown
 description: "Nuxt Content uses the Markdown syntax and conventions to provide a rich-text editing experience."
 ---
 
@@ -90,68 +90,6 @@ description: 'meta description of the page'
 | `title`                                     | `string`  | First `<h1>`{lang="html"} of the page | Title of the page, will also be injected in metas                                                        |
 | `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
 | `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/usage/navigation) return value. |
-
-
-### Excerpt
-
-Content excerpt or summary can be extracted from the content using `<!--more-->` as a divider.
-
-```md
----
-title: Introduction
----
-
-Learn how to use @nuxt/content.
-<!--more-->
-Full amount of content beyond the more divider.
-```
-
-Description property will contain the excerpt content unless defined within the Front Matter props.
-
-If there is no `<!--more-->` divider in the text then excerpt is undefined.
-
-Example variables will be injected into the document:
-
-```json
-{
-  "excerpt": Object
-  "body": Object
-  // ... other keys
-}
-```
-
-### Code Highlighting
-
-Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
-
-Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
-
-Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
-
-::callout
-[Read the API reference to configure or entirely disable syntax highlighting.](/get-started/configuration)
-::
-
-### Images
-
-You can add images to your `public` directory:
-
-```
-content/
-  index.md
-public/
-  img/
-    image.png
-nuxt.config.ts
-package.json
-tsconfig.json
-```
-
-And then use them in your markdown files in the `content` directory as such:
-
-```md [content/index.md]
-![my image](/img/image.png)
-```
 
 ### Vue Components
 
@@ -505,6 +443,67 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
   - _italic_{style="background-color: yellow; color: black;"} and **bold**{style="background-color: lightgreen;"} texts.
   ::
 ::
+
+### Excerpt
+
+Content excerpt or summary can be extracted from the content using `<!--more-->` as a divider.
+
+```md
+---
+title: Introduction
+---
+
+Learn how to use @nuxt/content.
+<!--more-->
+Full amount of content beyond the more divider.
+```
+
+Description property will contain the excerpt content unless defined within the Front Matter props.
+
+If there is no `<!--more-->` divider in the text then excerpt is undefined.
+
+Example variables will be injected into the document:
+
+```json
+{
+  "excerpt": Object
+  "body": Object
+  // ... other keys
+}
+```
+
+### Code Highlighting
+
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
+
+Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
+
+Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
+
+::callout
+[Read the API reference to configure or entirely disable syntax highlighting.](/get-started/configuration)
+::
+
+### Images
+
+You can add images to your `public` directory:
+
+```
+content/
+  index.md
+public/
+  img/
+    image.png
+nuxt.config.ts
+package.json
+tsconfig.json
+```
+
+And then use them in your markdown files in the `content` directory as such:
+
+```md [content/index.md]
+![my image](/img/image.png)
+```
 
 ### Binding Data in Markdown
 
