--- a/docs/content/docs/6.advanced/3.database.md
+++ b/docs/content/docs/6.advanced/3.database.md
@@ -1,6 +1,6 @@
 --- 
-title: 'Database' 
-description: 'How Nuxt Content stores and retrieves content' 
+title: Database 
+description: How Nuxt Content stores and retrieves content
 navigation: 
   title: SQL Storage 
 --- 
